--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@ async function fetchData() {
             const id = person.id || '';
             const name = person.name || '';
             let phone = person.phone || '';
+            const userid = person.userid || '';
             const work = person.work || person.gstin || '';
             const remark = person.remark || '';
             const assign = person.assign || person.busname || '';
